@@ -7,6 +7,9 @@
    - markus@cvs.openbsd.org 2002/09/23 22:11:05
      [monitor.c]
      only call auth_krb5 if kerberos is enabled; ok deraadt@
+   - markus@cvs.openbsd.org 2002/09/24 08:46:04
+     [monitor.c]
+     only call kerberos code for authctxt->valid
 
 20020923
  - (tim) [configure.ac] s/return/exit/ patch by dtucker@zip.com.au
@@ -706,4 +709,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2478 2002/09/25 02:19:39 djm Exp $
+$Id: ChangeLog,v 1.2479 2002/09/25 02:20:17 djm Exp $
